# for display continuity sake please use 2 spaces instead of tabs

2012-09-29 mmichaud <michael.michaud@free.fr>
  * DataSourceFileLayerLoader : last commit broke the setReadonly instruction
    applied on compressed files. This is now fixed. 

2012-09-26 mmichaud <michael.michaud@free.fr>
  * DataSourceFileLayerLoader : revert a change made a few months ago. Layer
    name has the file name *without* extension again. Did not yet revert for zip 
    files which still take the compressed file name (+ zip file name within 
    parenthesis) 

2012-09-25 ede
  * AbstractCursorTool:  work around "unable to draw first shape" due to 
    "java.lang.InternalError: 
      Unable to Stroke shape (attempt to validate Pipe with invalid SurfaceData)"

2012-09-24 ede
  * probably fix bug 3560708: Only .shp opened from zipped shapefile
    http://sourceforge.net/tracker/?func=detail&atid=679906&aid=3560708&group_id=118054

2012-09-24 mmichaud <michael.michaud@free.fr>
  * Small fix in SegmentStringsWithData2Features used by the NoderPlugIn

2012-09-22 mmichaud <michael.michaud@free.fr>
  * Update DXF driver to 0.7.8 (fix a bug preventing reading of TEXT entities)
  * Update topology plugin to 0.6 (rewrite of project points on line which can
    now perform several projections/insertions/splits per node
  * Fix 3569045 in PostGIS Writer
  * FR 3491966 Improve performance of label rendering with very large polygons.

2012-09-05 ede
  * JUMPWorkbench:
   - exit jre after early exception, no more hanging jre's
   - cleanup indentation

2012-09-03 mmichaud <michael.michaud@free.fr>
  * Upgrade csv-driver to version 0.6.5 (create empty geometries if geometry
    column is missing.
    
2012-09-02 mmichaud <michael.michaud@free.fr>
  * Fix bug 3564137 : pass Layerables to the LayerPrinter2 instead of Layers, so
    that a view containing a single RasterImageLayer can export the view.
    Remove check for java 1.4+ in SaveImageAsPlugIn