@@ -2,7 +2,9 @@
 
 2012-09-29 mmichaud <michael.michaud@free.fr>
   * DataSourceFileLayerLoader : last commit broke the setReadonly instruction
-    applied on compressed files. This is now fixed. 
+    applied on compressed files. This is now fixed.
+  * Modify SaveDatasetsPlugIn so that it can save formats defined in drivers
+    loaded from extensions (ex. dxf, geoconcept, kml)
 
 2012-09-26 mmichaud <michael.michaud@free.fr>
   * DataSourceFileLayerLoader : revert a change made a few months ago. Layer
